# openni_user_selection

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
src/: DefaultTrackingInitializer.cpp  PoseUserSelector.cpp  SampleManager.cpp  SceneDrawer.cpp  UserSelector.cpp  UserTracker.cpp  UserTracker.h  main.cpp
